@@ -143,6 +143,9 @@ S3method(residuals, bootstrap.mat)
 S3method(residuals, mat)
 S3method(residuals, pcr)
 ## plotting
+S3method(caterpillarPlot, default)
+S3method(caterpillarPlot, data.frame)
+S3method(caterpillarPlot, wa)
 S3method(plot, minDC)
 S3method(plot, bayesF)
 S3method(plot, cma)
